# rovi_project

./: .gitignore  CMakeLists.txt  README.md  rwsettings.xml  visu.rwplay
Project_WorkCell/: Scene.wc.xml
Project_WorkCell/parts/: Cylinder.3ds  Garden_gnome.3ds  cylinder.ac  rubber_duck.stl  rwsettings.xml
Project_WorkCell/wsg50/: wsg50.xml
RRT_connect/: CMakeLists.txt  README.md  main.cpp  rrt_connet_analysis.m
RRT_connect/Workcell_RRT/: Scene.wc.xml
RRT_connect/cylinder_-0.25_0.474_0.15/: data.txt  path_0.1.lua  path_0.3.lua  path_0.4.lua  path_0.5.lua  path_0.6.lua  path_0.7.lua  path_0.8.lua  path_0.9.lua  path_1.0.lua  path_1.1.lua  path_1.2.lua  path_1.3.lua  path_1.4.lua  path_1.5.lua  path_1.6.lua  path_1.7.lua  path_1.8.lua  path_1.9.lua  path_1.lua  path_10.lua  path_11.lua  path_2.0.lua  path_2.1.lua  path_2.2.lua  path_2.3.lua  path_2.4.lua  path_2.5.lua  path_2.6.lua  path_2.7.lua  path_2.8.lua  path_2.9.lua  path_2.lua  path_3.0.lua  path_3.1.lua  path_3.2.lua  path_3.3.lua  path_3.4.lua  path_3.5.lua  path_3.6.lua  (+11 more)
RRT_connect/cylinder_0.0_0.474_0.15/: data.txt  path_0.1.lua  path_0.2.lua  path_0.3.lua  path_0.4.lua  (+36 more)
combination/: README.md
default_workcell/: Scene.wc.xml
dense_stereo/: Camera_Left.pcd  Camera_Right.pcd  README.md
dense_stereo/src/: CMakeLists.txt  main.cpp
image_based/: CMakeLists.txt  README.md  main.cpp  terminal_call.txt
image_based/exercise7_cv/: CMakeLists.txt
image_based/files/: assimp_log.txt
image_based/homography_transform/: CMakeLists.txt  main.cpp  util.hpp
image_based/template_matching/exercise7_cv/src/: create_templates_cad.cpp  linemod.cpp
image_based/template_matching/files/: rwsettings.xml
image_based/template_matching/templates/: template0002_pose.txt  template0005_pose.txt  template0006_pose.txt  template0007_pose.txt  template0008_pose.txt  template0009_pose.txt  template0010_pose.txt  template0013_pose.txt  template0017_pose.txt  template0018_pose.txt  template0019_pose.txt  template0020_pose.txt  template0024_pose.txt  template0025_pose.txt
image_based/template_matching/workcell/parts/: Ape.3ds  Duck.3ds  Wall_2.3ds
image_based/templates/: template0000_pose.txt  template0001_pose.txt  template0003_pose.txt  template0004_pose.txt  template0011_pose.txt  template0012_pose.txt  template0014_pose.txt  template0015_pose.txt  template0016_pose.txt  template0021_pose.txt  template0022_pose.txt  template0023_pose.txt  template0026_pose.txt  template0027_pose.txt  template0028_pose.txt  template0029_pose.txt
image_based/workcell/: Scene.wc.xml
image_based/workcell/parts/: Cam.3ds  Trex.3ds  Wall_1.3ds  ape.stl  trex.stl
p2p_interpolation/: CMakeLists.txt  README.md  interpolation_results.m  jointspace_trajectory.txt  main.cpp  p2p_interpolation.cpp  p2p_interpolation.h  trajectory_points.txt
p2p_interpolation_parabolic_blend/: CMakeLists.txt  README.md
point_clouds_of_objects/: README.md  bottle.pcd  cylinder.pcd  garden_gnome.pcd  rubber_duck.pcd  square.pcd  square.ply  trex.pcd
project_workcell/: Scene.wc.xml
reachability_analysis/: CMakeLists.txt  README.md  collision_free_solutions.m  collision_free_solutions_side.m  collision_free_solutions_top.m  data_cylinder_side.txt  main.cpp
report_latex/: main.tex  setup.sty  titlepage.tex
rrt_connect/: README.md  analysis.m  forward_kinematics.txt  main.cpp  rrt_connet_analysis.m  rrt_connet_analysis.m~  trajectory.rwplay
simulated_depth_sensor/: CMakeLists.txt  README.md  analysis_of_results.m  assimp_log.txt  cloud_filtered.pcd  data.txt  main.cpp  rwsettings.xml
simulated_depth_sensor/scanner25D_point_clouds/random_picking_position/: CMakeLists.txt  data.txt  main.cpp
sparse_stereo/: README.md  assimp_log.txt  duck_data.txt  rwsettings.xml
sparse_stereo/src/: CMakeLists.txt  csv_reader.hpp  main.cpp  mesh.hpp  pnp_problem.hpp  util.hpp  util.hpp.old
src/: ReachabilityAnalysis.hpp  main.cpp
(+1185 files in other folders)
